--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -1,15 +1,32 @@
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  labels:
-    app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: manager-role
-    app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: fuzzycron
-    app.kubernetes.io/part-of: fuzzycron
-    app.kubernetes.io/managed-by: kustomize
   name: manager-role
 rules:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "list", "watch"]
+- apiGroups:
+  - batch.oofoghlu
+  resources:
+  - fuzzycronjobs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - batch.oofoghlu
+  resources:
+  - fuzzycronjobs/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - batch.oofoghlu
+  resources:
+  - fuzzycronjobs/status
+  verbs:
+  - get
+  - patch
+  - update
