--- a/config/samples/batch_v1_fuzzycronjob.yaml
+++ b/config/samples/batch_v1_fuzzycronjob.yaml
@@ -10,3 +10,20 @@ metadata:
   name: fuzzycronjob-sample
 spec:
   # TODO(user): Add fields here
+  schedule: "*/1 * * * *"
+  cronJob:
+    schedule: "*/1 * * * *"
+    startingDeadlineSeconds: 60
+    concurrencyPolicy: Allow # explicitly specify, but Allow is also default.
+    jobTemplate:
+      spec:
+        template:
+          spec:
+            containers:
+            - name: hello
+              image: busybox
+              args:
+              - /bin/sh
+              - -c
+              - date; echo Hello from the Kubernetes cluster
+            restartPolicy: OnFailure
