--- a/config/samples/batch_v1_fuzzycronjob.yaml
+++ b/config/samples/batch_v1_fuzzycronjob.yaml
@@ -10,7 +10,7 @@ metadata:
   name: fuzzycronjob-sample
 spec:
   # TODO(user): Add fields here
-  schedule: "*/1 * * * *"
+  schedule: "H H * * *"
   cronJob:
     schedule: "*/1 * * * *"
     startingDeadlineSeconds: 60
