Add print columns

--- a/config/crd/bases/batch.oofoghlu_fuzzycronjobs.yaml
+++ b/config/crd/bases/batch.oofoghlu_fuzzycronjobs.yaml
@@ -16,7 +16,14 @@ spec:
     singular: fuzzycronjob
   scope: Namespaced
   versions:
-  - name: v1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.schedule
+      name: Fuzzy Schedule
+      type: string
+    - jsonPath: .spec.cronJob.schedule
+      name: Schedule
+      type: string
+    name: v1
     schema:
       openAPIV3Schema:
         properties:
