--- a/config/crd/bases/batch.oofoghlu_fuzzycronjobs.yaml
+++ b/config/crd/bases/batch.oofoghlu_fuzzycronjobs.yaml
@@ -20,7 +20,7 @@ spec:
     - jsonPath: .spec.schedule
       name: Fuzzy Schedule
       type: string
-    - jsonPath: .spec.cronJob.schedule
+    - jsonPath: .status.schedule
       name: Schedule
       type: string
     name: v1
@@ -3404,6 +3404,9 @@ spec:
             - schedule
             type: object
           status:
+            properties:
+              schedule:
+                type: string
             type: object
         type: object
     served: true
